--- a/original-html/advice-page.html
+++ b/original-html/advice-page.html
@@ -12,57 +12,57 @@
                             color: white;
                         }
 
-                    body {
-                        background-color: black;
-                    }
+                        body {
+                            background-color: black;
+                        }
 
-                    header {
-                        padding: 25px;
-                        color: white;
-                    }
+                        header {
+                            padding: 25px;
+                            color: white;
+                        }
 
-                    .container {
-                        position: relative;
-                        left: 0;
-                        right: 0;
-                        padding: 0;
-                    }
+                        .container {
+                            position: relative;
+                            left: 0;
+                            right: 0;
+                            padding: 0;
+                        }
 
-                    .container > div {
-                        position: relative;
-                        margin: 0;
-                        padding: 0;
-                        left: 0;
-                        right: 0;
-                    }
+                        .container > div {
+                            position: relative;
+                            margin: 0;
+                            padding: 0;
+                            left: 0;
+                            right: 0;
+                        }
 
-                    .container > div:nth-child(even) {
-                        border-left: 16px solid #da1f4cff;
-                        background-color: #021323ff;
-                        padding: 25px
-                    }
+                        .container > div:nth-child(even) {
+                            border-left: 16px solid #da1f4cff;
+                            background-color: #021323ff;
+                            padding: 25px
+                        }
 
-                    .container > div:nth-child(odd) {
-                        border-left: 16px solid #04b3b4ff;
-                        background-color: #0b3357ff;
-                        padding: 25px
-                    }
+                        .container > div:nth-child(odd) {
+                            border-left: 16px solid #04b3b4ff;
+                            background-color: #0b3357ff;
+                            padding: 25px
+                        }
 
-                    #delay {
-                        border-left: 16px solid #d47786;
-                        background-color: #04b3b4ff;
-                        padding: 25px
-                    }
+                        #delay {
+                            border-left: 16px solid #d47786;
+                            background-color: #04b3b4ff;
+                            padding: 25px
+                        }
 
-                    #delegate {
-                        border-left: 16px solid #0b3357ff;
-                        background-color: #da1f4cff;
-                        padding: 25px
-                    }
+                        #delegate {
+                            border-left: 16px solid #0b3357ff;
+                            background-color: #da1f4cff;
+                            padding: 25px
+                        }
 
                         </style>
 
-                    </head>
+    </head>
     <body>
 
         <header>
@@ -70,30 +70,30 @@
         </header>
 
         <div class="container">
-            <div>
-                <div class="container-fluid">
-                    <h3>Distraction</h3>
-                    <ul style="color: #FFF;">
-                        <li>Take the target away from the situation.</li>
-                        <li>Interrupt the behaviour by causing another distraction.</li>
-
-                    </ul>
-                </div>
-            </div>
-
-            <div>
-                <div class="container-fluid">
-                    <h3>Direct Action</h3>
-                    <ul style="color: #FFF;">
-                        <li>Do not laugh at inappropriate jokes.</li>
-                        <li>Use humour.</li>
-                        <li>Call for help.</li>
-                        <li>Use body language to show disapproval.</li>
-                        <li>Publicly support the target.</li>
-
-                    </ul>
-                </div>
-            </div>
+<!--            <div>-->
+<!--                <div class="container-fluid">-->
+<!--                    <h3>Distraction</h3>-->
+<!--                    <ul style="color: #FFF;">-->
+<!--                        <li>Take the target away from the situation.</li>-->
+<!--                        <li>Interrupt the behaviour by causing another distraction.</li>-->
+<!---->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!---->
+<!--            <div>-->
+<!--                <div class="container-fluid">-->
+<!--                    <h3>Direct Action</h3>-->
+<!--                    <ul style="color: #FFF;">-->
+<!--                        <li>Do not laugh at inappropriate jokes.</li>-->
+<!--                        <li>Use humour.</li>-->
+<!--                        <li>Call for help.</li>-->
+<!--                        <li>Use body language to show disapproval.</li>-->
+<!--                        <li>Publicly support the target.</li>-->
+<!---->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <div>
                 <div class="container-fluid">
@@ -118,4 +118,3 @@
         </div>
     </body>
 </html>
-
