--- a/original-html/advice-page.html
+++ b/original-html/advice-page.html
@@ -1,69 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>4Ds Advice</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<div style="background: #0fffgff;">
-<div class="container-fluid">
-	<h2 style="color: #FFFFF">You could...</h2>
-</div>
-</div>
+                    <style>
+                        h3 {
+                            color: white;
+                        }
 
-<div style="background: #021323ff;">
-  <div class="container-fluid">
-    <h3 style="color: #FFF;">Distraction</h3>
-    <ul style="color: #FFF;">
-    	<li>Take the target away from the situation.</li>
-        <li>Interrupt the behaviour by causing another distraction.</li>
-    	
-    </ul>
-  </div>
-</div>
+                    body {
+                        background-color: black;
+                    }
 
-<div style="background: #0b3357ff;">
-  <div class="container-fluid">
-    <h3 style="color: #FFF;">Direct Action</h3>      
-    <ul style="color: #FFF;">
-    	<li>Do not laugh at inappropriate jokes.</li>
-        <li>Use humour.</li>
-        <li>Call for help.</li>
-        <li>Use body language to show disapproval.</li>
-        <li>Publicly support the target.</li>
-    	
-    </ul>
-  </div>
-</div>
+                    header {
+                        padding: 25px;
+                        color: white;
+                    }
 
-<div style="background: #04b3b4ff;">
-  <div class="container-fluid">
-    <h3 style="color: #FFF;">Delay</h3>      
-		<ul style="color: #FFF;">
-          <li>Privately support the target.</li>
-          <li>Privately speak to the perpetrator and call out the behaviour.</li>
-    	</ul> 
-  </div>
-</div>
+                    .container {
+                        position: relative;
+                        left: 0;
+                        right: 0;
+                        padding: 0;
+                    }
 
-<div style="background: #da1f4cff;">
-  <div class="container-fluid">
-    <h3 style="color: #FFF;">Delegate</h3>      
-      <ul style="color: #FFF;">
-          <li>Tell your Senior Tutor.</li>
-          <li>Speak to other support available across College.</li>
+                    .container > div {
+                        position: relative;
+                        margin: 0;
+                        padding: 0;
+                        left: 0;
+                        right: 0;
+                    }
 
-      </ul>
-  </div>
-</div>
+                    .container > div:nth-child(even) {
+                        border-left: 16px solid #da1f4cff;
+                        background-color: #021323ff;
+                        padding: 25px
+                    }
 
+                    .container > div:nth-child(odd) {
+                        border-left: 16px solid #04b3b4ff;
+                        background-color: #0b3357ff;
+                        padding: 25px
+                    }
 
+                    #delay {
+                        border-left: 16px solid #d47786;
+                        background-color: #04b3b4ff;
+                        padding: 25px
+                    }
 
+                    #delegate {
+                        border-left: 16px solid #0b3357ff;
+                        background-color: #da1f4cff;
+                        padding: 25px
+                    }
 
-</body>
+                        </style>
+
+                    </head>
+    <body>
+
+        <header>
+            <h1>You should...</h1>
+        </header>
+
+        <div class="container">
+            <div>
+                <div class="container-fluid">
+                    <h3>Distraction</h3>
+                    <ul style="color: #FFF;">
+                        <li>Take the target away from the situation.</li>
+                        <li>Interrupt the behaviour by causing another distraction.</li>
+
+                    </ul>
+                </div>
+            </div>
+
+            <div>
+                <div class="container-fluid">
+                    <h3>Direct Action</h3>
+                    <ul style="color: #FFF;">
+                        <li>Do not laugh at inappropriate jokes.</li>
+                        <li>Use humour.</li>
+                        <li>Call for help.</li>
+                        <li>Use body language to show disapproval.</li>
+                        <li>Publicly support the target.</li>
+
+                    </ul>
+                </div>
+            </div>
+
+            <div>
+                <div class="container-fluid">
+                    <h3 style="color: #FFF;">Delay</h3>
+                    <ul style="color: #FFF;">
+                        <li>Privately support the target.</li>
+                        <li>Privately speak to the perpetrator and call out the behaviour.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div>
+                <div class="container-fluid">
+                    <h3 style="color: #FFF;">Delegate</h3>
+                    <ul style="color: #FFF;">
+                        <li>Tell your Senior Tutor.</li>
+                        <li>Speak to other support available across College.</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
+
